improvements and bug fixes

--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -122,14 +122,14 @@ html
                                 div.btn-group.mr-2
                                     button#stats-epoch-week.tfilter.stats-epoch.btn.btn-primary 7
                                     button#stats-epoch-recent.tfilter.stats-epoch.btn.btn-secondary 90
-                                    button#stats-epoch-recent.tfiler.stats-epoch.btn.btn-secondary(value='current-month' disabled)
+                                    button#stats-epoch-recent.tfilter.stats-epoch.btn.btn-secondary(value='current-month')
                                         i.bi.bi-calendar3
-                                    button#stats-epoch-recent.stats-epoch.lfilter.btn.btn-secondary(value='prior-month' disabled)
+                                    button#stats-epoch-recent.stats-epoch.tfilter.btn.btn-secondary(value='prior-month')
                                         i.bi.bi-arrow-left-circle
                                         i.bi.bi-calendar3
-                                    button#stats-epoch-recent.stats-epoch.lfilter.btn.btn-secondary(value='custom-range' disabled)
+                                    button#stats-epoch-recent.stats-epoch.tfilter.btn.btn-secondary(value='custom-range' disabled)
                                         i.bi.bi-clock
-                                    button#stats-epoch-alltime.stats-epoch.lfilter.btn.btn-secondary ∞
+                                    button#stats-epoch-alltime.stats-epoch.tfilter.btn.btn-secondary ∞
                     div.row
                         div.col-xs-12.col-xl-6
                             div#overview-killmails
